--- a/app/templates/edit_city.html
+++ b/app/templates/edit_city.html
@@ -51,6 +51,7 @@
         <button type="submit" style="color: red;">Delete City</button>
     </form>
 
+    <a href="/city_shops/{{ city.city_id }}">Manage Shops</a>
     <a href="/">Back to Home</a>
 </body>
 </html>
