--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -8,6 +8,7 @@
     <ul>
         <li><a href="/cities">Manage Cities</a></li>
         <li><a href="/shops">Manage Shops</a></li>
+        <li><a href="/items">Manage Items</a></li> 
     </ul>
 </body>
 </html>
