--- a/app/templates/add_city.html
+++ b/app/templates/add_city.html
@@ -45,6 +45,7 @@
 
         <button type="submit">Add City</button>
     </form>
-    <a href="/">Back to Home</a>
+    <a href="{{ url_for('city.home') }}">All Cities</a>
+    <a href="/">Home</a>
 </body>
 </html>
